<resources>
    <string name="app_name">Arwina</string>
    <string name="phone">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="login">دخول</string>
    <string name="new_user">مستخدم جديد</string>
    <string name="forget_password">استرجاع كلمة المرور؟</string>
    <string name="user_login">تسجيل دخول</string>
    <string name="signUp">التسجيل</string>
    <string name="user_sign">تسجيل عميل</string>
    <string name="company_sign">تسجيل شركة</string>
    <string name="mandoop_sign">تسجيل مندوب</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="address">العنوان</string>
    <string name="market_name">اسم السجل التجارى</string>
    <string name="market_number">رقم السجل النجارى</string>
    <string name="upload_image">رفع صورة</string>
    <string name="have_mandoop">هل لديكم مناديب توصيل</string>
    <string name="yes_have">نعم لدينا</string>
    <string name="no_have_not">لا ليس لدينا</string>
    <string name="mandoop_signUp">تسجيل مندوب</string>
    <string name="upload_car_image">ارفاق صورة للسيارة</string>
    <string name="upload_lisence_image">ارفاق صورة رخصة القيادة</string>
    <string name="upload_national_ID_image">ارفاق نسخة الهوية</string>
    <string name="upload_mandoop_image">ارفاق صورة شخصية</string>
    <string name="city">المدينة</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="logining">جارى الدخول</string>
    <string name="pass_is_weak">كلمة المرور ضعيفة</string>
    <string name="plz_check_data">رقم الجوال او كلمة المرور غير صحيحة</string>
    <string name="error_connection">خطأ فى الاتصال بالشبكة !</string>
    <string name="phone_already_exist">رقم الهاتف موجود بالفعل.</string>
    <string name="payment">الدفع</string>
    <string name="about_app">عن التطبيق</string>
    <string name="terms">الشروط والأحكام</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="share_app">دعوة صديق</string>
    <string name="logOut">تسجيل الخروج</string>
    <string name="no_available_data">لا توجد بيانات حالية</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="order">طلب</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signing_up">جارى التسجيل</string>
    <string name="registered_successfully">تم التسجيل بنجاح</string>
    <string name="phone_already_taken">The phone has already been taken.</string>
    <string name="name">الاسم</string>
    <string name="send_now">ارسال الأن</string>
    <string name="message">رسالتك</string>
    <string name="sending">جارى الارسال</string>
    <string name="orders">الطلبات</string>
    <string name="no_orders_data">لا يوجد طلبات حالية</string>
    <string name="payment_when_receiving">الدفع عند الاستلام</string>
    <string name="visa_payment">الدفع بالفيزا او الماستركارد</string>
    <string name="continue_payment">استكمال الدفع</string>
    <string name="visa_and_masterCard">فيزا و ماستركارد</string>
    <string name="card_number">رقم البطاقة</string>
    <string name="expire_date">تاريخ الانتهاء</string>
    <string name="cvv">CVV</string>
    <string name="holder_cardNum">رقم صاحب البطاقة</string>
    <string name="total_cost">المبلغ الاجمالى</string>
    <string name="pay_now">ادفع الان</string>
    <string name="select_date_first">برجاء تحديد التاريخ اولا</string>
    <string name="company_notifications">اشعارات الشركة</string>
    <string name="products">المنتجات</string>
    <string name="add_product">اضافة منتج</string>
    <string name="product_name">اسم المنتج</string>
    <string name="price">السعر</string>
    <string name="quantity">الكمية</string>
    <string name="max_quantity">الحد الاقصى لكمية</string>
    <string name="complete_desc">وصف كامل للمنتج</string>
    <string name="product_image">صورة للمنتج</string>
    <string name="add_now">اضف الان</string>
    <string name="should_select_address_first">يجب تحديد موقع التوصيل اولا!</string>
    <string name="should_select_product_image">يجب اختيار صورة المنتج اولا</string>
    <string name="wallet">محفظتى</string>
    <string name="update_profile">تعديل حسابى</string>
    <string name="get_image_success">تم اختيار الصورة</string>
    <string name="sign">تسجيل</string>
    <string name="sign_success">تم التسجيل بنجاح</string>
    <string name="ryal_saudi"> ريال </string>
    <string name="packag"> عبوة </string>
    <string name="max_quant">الحد الاقصى:</string>
    <string name="dismiss">الغاء</string>
    <string name="yes">موافق</string>
    <string name="outofApp">هل تريد الخروج من التطبيق ؟</string>
    <string name="notifications">الاشعارات</string>
    <string name="profile">الملف الشخصى</string>
    <string name="send">ارسال</string>
    <string name="code">الكود</string>
    <string name="active_code">التحقق من الكود</string>
    <string name="new_password">كلمة مرور جديدة</string>
    <string name="my_products">المنتجات</string>
    <string name="edit_product">تعديل المنتج</string>
    <string name="edit">تعديل</string>
    <string name="edit_image">تغيير صورة المنتج</string>
    <string name="edit_data">تعديل الملف الشخصى</string>
    <string name="edit_profile_image">تغيير الصورة</string>
    <string name="date_updatted_success">تم تحديث بياناتك بنجاح</string>
    <string name="updatting">جارى التحديث</string>
    <string name="box_count">عدد العبوات</string>
    <string name="description">المواصفات</string>
    <string name="discount_coupon">كوبون الخصم</string>
    <string name="set_coupon_val_here">ضع الكوبون هنا</string>
    <string name="order_info">معلومات الطلب</string>
    <string name="total_price">السعر الاجمالى</string>
    <string name="deliver_location">تحديد موقع التوصيل</string>
    <string name="deliver_time">تحديد ميعاد التسليم</string>
    <string name="date">التاريخ</string>
    <string name="write_notes">اكتب هنا اذا كان لديك ملاحظات</string>
    <string name="click_here_to_detect_address">اضغط هنا وحدد موقعك</string>
    <string name="payment_and_contineOrder">الدفع واستكمال الطلب</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success">تم الدخول بنجاح</string>
    <string name="your_message">اكتب رسالتك</string>
    <string name="you_have_km_order">لديك حتى الان</string>
    <string name="add_new_product">اضافة منتج جديد</string>
    <string name="account">الحساب</string>
    <string name="forget_pass">استرجاع كلمة المرور</string>
    <string name="ordering">جارى الطلب</string>
    <string name="time">الوقت</string>
    <string name="process">طلبات نشطة</string>
    <string name="compeleted">طلبات منتهية</string>
    <string name="order_num">رقم الطلب</string>
    <string name="exellent">ممتاز</string>
    <string name="thanks">تم اضافة المنتج بنجاح</string>
    <string name="show_sells">يمكنك مشاهدة مبيعاتك الان</string>
    <string name="okk">حسنا</string>
    <string name="adding">جارى الاضافة</string>
    <string name="update_success">تم التعديل بنجاح</string>
    <string name="detect_delivery_time">وقت التوصيل</string>
    <string name="select_time_first">يجب تحديد ميعاد التوصيل اولا</string>
    <string name="count">الكمية</string>
    <string name="order_state">حالة الطلب</string>
    <string name="in_process">قيد التجهيز</string>
    <string name="in_way">فى الطريق</string>
    <string name="completed">تم الاستلام</string>
    <string name="about_us">من نحن</string>
    <string name="code_app">رمز الترويج</string>
    <string name="share_code_txt">شارك هذا الرمز مع اهلك واصدقائك للحصول على خصم لطلباتك</string>
    <string name="share_now">مشاركة الان</string>
    <string name="user_notifications">إشعارات العميل</string>
    <string name="order_time">تاريخ الطلب</string>
    <string name="deliver_company">شركة التوصيل</string>
    <string name="select_service">اختر الشركة</string>
    <string name="loading">جارى التحميل</string>
    <string name="select_mandoop">تحديد المندوب</string>
    <string name="order_number">طلب رقم</string>
    <string name="accept_user_order">هل توافق على طلب العميل</string>
    <string name="no">لا</string>
    <string name="mandoop_notification">إشعارات المندوب</string>
    <string name="edit_user_image">تغيير الصورة الشخصية</string>
    <string name="edit_national_ID_image">تغيير صورة الهوية الشخصية</string>
    <string name="edit_lisence_image">تغيير صورة الرخصة</string>
    <string name="edit_car_image">تغيير صورة السيارة</string>
    <string name="edit_address">تغيير العنوان</string>
    <string name="should_select_mandoop_first">برجاء اختيار مندوب التوصيل اولا</string>
    <string name="select">اختيار</string>
    <string name="visitor_login">دخول كزائر</string>
    <string name="get_address_successfully">تم اختيار العنوان بنجاح</string>
    <string name="title_activity_maps">Map</string>
</resources>
