<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <ImageView
        android:id="@+id/topImageV_id"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editProfile_userImageV_id"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/add_company"
        app:layout_constraintBottom_toBottomOf="@id/topImageV_id"
        app:layout_constraintEnd_toEndOf="@id/topImageV_id"
        app:layout_constraintStart_toStartOf="@id/topImageV_id"
        app:layout_constraintTop_toTopOf="@id/topImageV_id" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImageV_id">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp">

            <Button
                android:id="@+id/editCompany_btn_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons_bg"
                android:text="@string/edit"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCompany_have_mandoop_rg_id" />

            <EditText
                android:id="@+id/editCompany_name_ed_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editCompany_address_ed_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_name_ed_id" />

            <EditText
                android:id="@+id/editCompany_phone_ed_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="right"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_address_ed_id" />

            <EditText
                android:id="@+id/editCompany_market_name_ed_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/market_name"
                android:inputType="text"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCompany_phone_ed_id" />

            <EditText
                android:id="@+id/editCompany_market_number_ed_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:hint="@string/market_number"
                android:inputType="numberSigned"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCompany_market_name_ed_id" />

            <EditText
                android:id="@+id/editCompany_password_ed_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="right"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_address_layout_id" />

            <LinearLayout
                android:id="@+id/editCompany_car_imageV_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="center_vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_upload_imageV_id">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:id="@+id/edit_car_image_txtV_id"
                    android:text="@string/edit_car_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editCompany_lisence_imageV_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="center_vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_car_imageV_id">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:id="@+id/edit_lisenceImage_txtV_id"
                    android:text="@string/edit_lisence_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editCompany_identity_imageV_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="center_vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_lisence_imageV_id">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:padding="2dp"
                    android:src="@drawable/image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:id="@+id/identity_image_txtV_id"
                    android:text="@string/edit_national_ID_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editCompany_upload_imageV_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="center_vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_market_number_ed_id">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:id="@+id/editCompany_image_txtV_id"
                    android:text="@string/edit_user_image" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_address_layout_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_ed_bg"
                android:gravity="center_vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editCompany_identity_imageV_id">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:padding="2dp"
                    android:src="@drawable/map2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:id="@+id/edit_address_txtV_id"
                    android:text="@string/edit_address" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/editCompany_have_mandoop_rg_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/have_mandoop_txtv_id">

                <RadioButton
                    android:id="@+id/editCompany_have_mandoop_rb_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/yes_have" />

                <RadioButton
                    android:id="@+id/editCompany_not_have_mandoop_rb_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/no_have_not" />
            </RadioGroup>

            <TextView
                android:id="@+id/have_mandoop_txtv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/have_mandoop"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editCompany_password_ed_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_data"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/editProfile_userImageV_id"
        app:layout_constraintEnd_toEndOf="@id/topImageV_id"
        app:layout_constraintStart_toStartOf="@id/topImageV_id" />
</androidx.constraintlayout.widget.ConstraintLayout>